--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/details_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_content"
@@ -22,6 +22,7 @@
                 android:id="@+id/detailsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorMovieDBgreen"
                 android:orientation="vertical"
                 tools:context=".MovieDetails">
 
@@ -32,8 +33,8 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="6dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="4dp"
+                    android:elevation="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -43,77 +44,73 @@
                         <ImageView
                             android:id="@+id/poster"
                             android:layout_width="match_parent"
-                            android:layout_height="258dp"
-                            />
+                            android:layout_height="258dp" />
 
                         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                             android:id="@+id/youtube_fragment2"
                             android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:elevation="6dp"
-                    android:layout_margin="8dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp" />
 
                         <Button
                             android:id="@+id/trailer_button"
                             style="@style/Widget.AppCompat.Button.Colored"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="start"
+                            android:layout_gravity="center"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:text="@string/play_trailer"
                             android:textStyle="bold" />
+                    </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:elevation="6dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_horizontal"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/rate_btn"
+                            style="@style/Widget.AppCompat.Button.Colored"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:orientation="horizontal">
+                            android:layout_marginStart="8dp"
+                            android:text="@string/rate"
+                            android:textStyle="bold" />
 
-                            <Button
-                                android:id="@+id/rate_btn"
-                                style="@style/Widget.AppCompat.Button.Colored"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:text="@string/rate"
-                                android:textStyle="bold" />
-
-                            <RatingBar
-                                android:id="@+id/ratingBar"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:isIndicator="false"
-                                android:numStars="5"
-                                android:rating="0"
-                                android:stepSize="1.0"
-                                android:transformPivotX="0dp"
-                                android:transformPivotY="0dp" />
-
-                        </LinearLayout>
+                        <RatingBar
+                            android:id="@+id/ratingBar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:isIndicator="false"
+                            android:numStars="5"
+                            android:rating="0"
+                            android:stepSize="1.0"
+                            android:transformPivotX="0dp"
+                            android:transformPivotY="0dp" />
 
                     </LinearLayout>
+
+
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="6dp"
-                    android:layout_margin="8dp">
+                    android:layout_margin="4dp"
+                    android:elevation="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -127,7 +124,7 @@
                             android:layout_marginStart="8dp"
                             android:text="@string/similar_movies"
                             android:textAllCaps="true"
-                            android:textColor="@color/colorMovieDBgreen"
+                            android:textColor="@color/colorAccent"
                             android:textSize="36sp"
                             android:textStyle="bold" />
 
@@ -135,6 +132,7 @@
                             android:id="@+id/details_recRecyclerView"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_margin="2dp"
                             android:orientation="horizontal">
 
                         </android.support.v7.widget.RecyclerView>
@@ -146,10 +144,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="4dp"
                     android:elevation="6dp"
-                    card_view:cardUseCompatPadding="false"
-                    >
+                    card_view:cardUseCompatPadding="false">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -162,7 +160,7 @@
                             android:layout_marginTop="4dp"
                             android:text="@string/movie_info"
                             android:textAllCaps="true"
-                            android:textColor="@color/colorMovieDBgreen"
+                            android:textColor="@color/colorAccent"
                             android:textSize="36sp"
                             android:textStyle="bold" />
 
@@ -322,7 +320,7 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="4dp"
                     android:elevation="6dp"
                     card_view:cardUseCompatPadding="false">
 
@@ -338,7 +336,7 @@
                             android:layout_gravity="center"
                             android:text="@string/overview"
                             android:textAllCaps="true"
-                            android:textColor="@color/colorMovieDBgreen"
+                            android:textColor="@color/colorAccent"
                             android:textSize="36sp"
                             android:textStyle="bold" />
 
@@ -362,7 +360,7 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="4dp"
                     android:elevation="6dp">
 
                     <LinearLayout
@@ -376,7 +374,7 @@
                             android:layout_gravity="center"
                             android:text="@string/cast"
                             android:textAllCaps="true"
-                            android:textColor="@color/colorMovieDBgreen"
+                            android:textColor="@color/colorAccent"
                             android:textSize="36sp"
                             android:textStyle="bold" />
 
@@ -393,11 +391,11 @@
                             android:orientation="vertical">
 
                         </android.support.v7.widget.RecyclerView>
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
-                            android:background="@color/colorMovieDBgreen"
-                            />
+                            android:background="@color/colorMovieDBgreen" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
