--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -19,6 +19,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="1dp"
         card_view:cardUseCompatPadding="false"
+        android:foreground="?android:attr/selectableItemBackground"
         >
 
         <RelativeLayout
